--- a/.scribe/endpoints/01.yaml
+++ b/.scribe/endpoints/01.yaml
@@ -1,90 +1,20 @@
-name: '"Faculty Management"'
+name: Authentication
 description: ''
 endpoints:
   -
     httpMethods:
-      - GET
-    uri: api/v1/faculties
-    metadata:
-      groupName: '"Faculty Management"'
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'List all faculties.'
-      description: ''
-      authenticated: true
-      custom: []
-    headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters: []
-    cleanUrlParameters: []
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters: []
-    cleanBodyParameters: []
-    fileParameters: []
-    responses:
-      -
-        status: 200
-        content: |-
-          {
-              "data": [
-                  {
-                      "id": 1,
-                      "name": "Faculty of Engineering",
-                      "departments": []
-                  },
-                  {
-                      "id": 2,
-                      "name": "Faculty of Arts",
-                      "departments": []
-                  }
-              ],
-              "links": {
-                  "first": "http://localhost/api/v1/faculties?page=1",
-                  "last": "http://localhost/api/v1/faculties?page=1",
-                  "prev": null,
-                  "next": null
-              },
-              "meta": {
-                  "current_page": 1,
-                  "from": 1,
-                  "last_page": 1,
-                  "path": "http://localhost/api/v1/faculties",
-                  "per_page": 10,
-                  "to": 2,
-                  "total": 2
-              }
-          } 
-        headers: []
-        description: ''
-        custom: []
-    responseFields: []
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer {token}'
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
       - POST
-    uri: api/v1/faculties
+    uri: api/v1/tokens/create
     metadata:
-      groupName: '"Faculty Management"'
+      groupName: Authentication
       groupDescription: ''
       subgroup: ''
       subgroupDescription: ''
-      title: 'Store a newly created resource in storage.'
-      description: ''
-      authenticated: true
+      title: 'Create API Token'
+      description: 'Authenticates a user and returns a plain-text Sanctum API token.'
+      authenticated: false
       custom: []
     headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
       Content-Type: application/json
       Accept: application/json
     urlParameters: []
@@ -92,265 +22,53 @@ endpoints:
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
-      name:
-        name: name
-        description: 'The name of the faculty.'
+      email:
+        name: email
+        description: "The user's email address."
         required: true
-        example: 'Faculty of Science'
+        example: user@example.com
+        type: string
+        enumValues: []
+        exampleWasSpecified: true
+        nullable: false
+        custom: []
+      password:
+        name: password
+        description: "The user's password."
+        required: true
+        example: password
+        type: string
+        enumValues: []
+        exampleWasSpecified: true
+        nullable: false
+        custom: []
+      device_name:
+        name: device_name
+        description: 'A name for the device or token, for your reference.'
+        required: true
+        example: my-laptop
         type: string
         enumValues: []
         exampleWasSpecified: true
         nullable: false
         custom: []
     cleanBodyParameters:
-      name: 'Faculty of Science'
-    fileParameters: []
-    responses:
-      -
-        status: 201
-        content: |-
-          {
-              "data": {
-                  "id": 1,
-                  "name": "Faculty of Engineering",
-                  "departments": [
-                      {
-                          "id": 1,
-                          "name": "Department of Computer Science"
-                      }
-                  ]
-              }
-          } 
-        headers: []
-        description: ''
-        custom: []
-    responseFields: []
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer {token}'
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - GET
-    uri: 'api/v1/faculties/{id}'
-    metadata:
-      groupName: '"Faculty Management"'
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'Display the specified resource.'
-      description: ''
-      authenticated: true
-      custom: []
-    headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters:
-      id:
-        name: id
-        description: 'The ID of the faculty.'
-        required: true
-        example: 1
-        type: integer
-        enumValues: []
-        exampleWasSpecified: false
-        nullable: false
-        custom: []
-      faculty:
-        name: faculty
-        description: 'The ID of the faculty.'
-        required: true
-        example: 16
-        type: integer
-        enumValues: []
-        exampleWasSpecified: false
-        nullable: false
-        custom: []
-    cleanUrlParameters:
-      id: 1
-      faculty: 16
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters: []
-    cleanBodyParameters: []
+      email: user@example.com
+      password: password
+      device_name: my-laptop
     fileParameters: []
     responses:
       -
         status: 200
         content: |-
           {
-              "data": {
-                  "id": 1,
-                  "name": "Faculty of Engineering",
-                  "departments": [
-                      {
-                          "id": 1,
-                          "name": "Department of Computer Science"
-                      }
-                  ]
-              }
-          } 
+           "token": "1|aBcDeFgHiJkLmNoPqRsTuVwXyZ"
+          }
         headers: []
         description: ''
         custom: []
     responseFields: []
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer {token}'
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - PUT
-      - PATCH
-    uri: 'api/v1/faculties/{id}'
-    metadata:
-      groupName: '"Faculty Management"'
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'Update the specified resource in storage.'
-      description: ''
-      authenticated: true
-      custom: []
-    headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters:
-      id:
-        name: id
-        description: 'The ID of the faculty.'
-        required: true
-        example: 1
-        type: integer
-        enumValues: []
-        exampleWasSpecified: false
-        nullable: false
-        custom: []
-      faculty:
-        name: faculty
-        description: 'The ID of the faculty.'
-        required: true
-        example: 16
-        type: integer
-        enumValues: []
-        exampleWasSpecified: false
-        nullable: false
-        custom: []
-    cleanUrlParameters:
-      id: 1
-      faculty: 16
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters:
-      name:
-        name: name
-        description: 'The name of the faculty.'
-        required: false
-        example: 'Faculty of Applied Science'
-        type: string
-        enumValues: []
-        exampleWasSpecified: true
-        nullable: false
-        custom: []
-    cleanBodyParameters:
-      name: 'Faculty of Applied Science'
-    fileParameters: []
-    responses:
-      -
-        status: 200
-        content: |-
-          {
-              "data": {
-                  "id": 1,
-                  "name": "Faculty of Engineering",
-                  "departments": [
-                      {
-                          "id": 1,
-                          "name": "Department of Computer Science"
-                      }
-                  ]
-              }
-          } 
-        headers: []
-        description: ''
-        custom: []
-    responseFields: []
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer {token}'
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - DELETE
-    uri: 'api/v1/faculties/{id}'
-    metadata:
-      groupName: '"Faculty Management"'
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'Remove the specified resource from storage.'
-      description: ''
-      authenticated: true
-      custom: []
-    headers:
-      Authorization: 'Bearer {YOUR_AUTH_KEY}'
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters:
-      id:
-        name: id
-        description: 'The ID of the faculty.'
-        required: true
-        example: 1
-        type: integer
-        enumValues: []
-        exampleWasSpecified: false
-        nullable: false
-        custom: []
-      faculty:
-        name: faculty
-        description: 'The ID of the faculty.'
-        required: true
-        example: 16
-        type: integer
-        enumValues: []
-        exampleWasSpecified: false
-        nullable: false
-        custom: []
-    cleanUrlParameters:
-      id: 1
-      faculty: 16
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters: []
-    cleanBodyParameters: []
-    fileParameters: []
-    responses:
-      -
-        status: 204
-        content: ''
-        headers: []
-        description: ''
-        custom: []
-    responseFields: []
-    auth:
-      - headers
-      - Authorization
-      - 'Bearer {token}'
+    auth: []
     controller: null
     method: null
     route: null
