--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.9",
+        "owen-it/laravel-auditing": "^14.0",
         "tightenco/ziggy": "^2.3"
     },
     "require-dev": {
