--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.12.2",
@@ -32,7 +34,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-day-picker": "^9.9.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.62.0",
