Fix CSV import job method signatures and swagger-ui assets
- Fix ProcessAttendanceImport processRow signature to match abstract class
- Fix ProcessEnrollmentImport processRow signature to match abstract class
- Add missing getValidationMessages methods to both import jobs
- Reinstall swagger-api/swagger-ui with dist assets for API docs

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "owen-it/laravel-auditing": "^14.0",
         "promphp/prometheus_client_php": "^2.14",
+        "swagger-api/swagger-ui": "^5.0",
         "tightenco/ziggy": "^2.3"
     },
     "require-dev": {
