Remove schema dump and fix Docker deployment
- Delete database/schema/mysql-schema.sql to avoid SSL issues with mariadb-client
- Add schema directory to rsync exclusions in deploy.sh
- Add tests directory to rsync exclusions
- Remove deprecated version attribute from docker-compose.prod.yml
- Add --no-cache flag to Docker build for clean rebuilds

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -33,6 +31,7 @@ services:
     image: mysql:8.0
     container_name: sis-mysql
     restart: unless-stopped
+    command: --default-authentication-plugin=mysql_native_password --require-secure-transport=OFF
     environment:
       - MYSQL_DATABASE=university_sis
       - MYSQL_USER=sis_user
