--- a/.dockerignore
+++ b/.dockerignore
@@ -31,6 +31,9 @@ tests
 phpunit.xml
 .phpunit.result.cache
 
+# Schema dump (will run migrations instead)
+database/schema
+
 # Documentation
 *.md
 !README.md
