Fix PSR-4 namespaces and gitignore test artifacts
- Fix 6 test files with incorrect namespace Tests\Feature\Feature
  (should be Tests\Feature to match file path)
- Add test-results/ and playwright-report/ to gitignore
- Remove accidentally committed test artifact files

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ routes.json
 # Custom Ignores
 .idea
 storage/framework/testing/
+test-results/
+frontend/test-results/
+frontend/playwright-report/
